# talos-discovery-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  discovery_service_log.txt
.devcontainer/: Dockerfile  apt.conf  devcontainer.json  environment  genua-sys.crt
api/: build.rs
api/src/: lib.rs
client/: Cargo.toml
client/src/: client.rs  main.rs
presentation/: Makefile  presentation.md
presentation/g20beamer/: Makefile  README.md  example.md  g.template  g20beamer.pandoc.template  g20beamer.sty  g20colors.sty  g24beamer.pandoc.template  g24beamer.sty  main.tex
presentation/g20beamer/pics/: genua-logo-weiss.xbb
scripts/: grpcurl_example.sh  read_data.sh  start_service.sh  store_data.sh
server/: Cargo.toml  Makefile.toml  README.md  skaffold.yaml
server/Makefile.toml.d/: main.toml  skaffold.toml
server/helm/: Chart.yaml  values.yaml
server/helm/templates/: deployment.yaml  ingress.yaml
server/src/: cluster.rs  main.rs  service.rs
talos/: README.md
talos-discovery-service/: Cargo.toml  Dockerfile  README.md  build.rs  grpcurl_example.sh
talos-discovery-service/Makefile.toml.d/: main.toml
talos-discovery-service/api/: Cargo.toml  build.rs
talos-discovery-service/api/proto/v1alpha1/client/: affiliate.proto
talos-discovery-service/api/proto/v1alpha1/server/: cluster.proto
talos-discovery-service/client/: Cargo.toml
talos-discovery-service/client/src/: chat.rs  client.rs  main.rs
talos-discovery-service/helm/: values.yaml
talos-discovery-service/scripts/: grpcurl_example.sh  read_data.sh  start_service.sh  store_data.sh
talos-discovery-service/server/: Cargo.toml  README.md  skaffold.yaml
talos-discovery-service/server/Makefile.toml.d/: docker-rust.toml  main.toml  skaffold.toml
talos-discovery-service/server/helm/: Chart.yaml  values.yaml
talos-discovery-service/server/helm/templates/: deployment.yaml  service.yaml
talos-discovery-service/server/src/: cluster.rs  main.rs  service.rs
talos-discovery-service/src/: cluster.rs  main.rs  service.rs
talos/libvirt-talos/: .terraform.lock.hcl  README.md  main.tf
talos/modules/libvirt/: main.tf  outputs.tf  variables.tf
talos/modules/openstack/: network.tf
talos/modules/talos/: variables.tf
talos/modules/talos/templates/: controlplane.yaml.tftpl  worker.yaml.tftpl
talos/openstack-talos/: README.md  terraform.tfvars
xfft/: playbook.yml  setup.yml  vars.yml
xfft/files/: bashrc.sh  docker_microk8s_registry.j2  docker_proxy_conf.j2  genua-it.crt  git-go  p10k.zsh
xfft/roles/docker/tasks/: main.yaml
xfft/roles/general/handlers/: main.yml
xfft/roles/general/tasks/: main.yaml
xfft/roles/microk8s/tasks/: main.yaml
xfft/roles/podman/tasks/: main.yaml
xfft/roles/rancher/tasks/: main.yaml
xfft/roles/vnc/tasks/: main.yaml
