[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
discovery-api.workspace = true
prost.workspace = true
prost-types.workspace = true
sha256.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
