[package]
name = "talos-discovery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5", features = ["env", "derive", "std"] }
prost = { version = "0.13.5" }
prost-types = { version = "0.13.5" }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["server"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.1"
