[package]
name = "talos-discovery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
discovery-api.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
